# mayi

./: .gitignore  debug_qwen_processor.py  inspect_qwen_structure.py  inspect_vision_forward.py  main.py  pyproject.toml  test_vlm_reid.py  verify_gpu_fix.py
config/: default.yaml
convert/: __init__.py  cli.py
convert/config/: qwen_export.yaml  siglip_export.yaml  yolo_export.yaml
convert/converters/: __init__.py  qwen_converter.py  siglip_converter.py  yolo_converter.py
convert/core/: __init__.py  base.py  onnx_utils.py  tensorrt_utils.py
convert/examples/: basic_usage.py
convert/runtime/: __init__.py  onnx_embedder.py  onnx_qwen_generator.py  tensorrt_embedder.py
convert/verification/: __init__.py  benchmark.py  validator.py
mayi/anchor_bank/: bank.py
mayi/conditions/: __init__.py  aspect_ratio.py  base.py  bbox_size.py  pose_completeness.py
mayi/detection/: detector.py
mayi/models/: types.py
mayi/output/: __init__.py  json_writer.py  video_writer.py
mayi/reid/: embedder.py
mayi/reid/failure_detectors/: __init__.py  base.py  consistency_monitor.py  embedding_collapse.py  speed_jump.py
mayi/tracking/: id_mapper.py  track_manager.py
mayi/vlm/: __init__.py  analyzer.py  verifier.py
