[project]
name = "mayi"
version = "0.1.0"
description = "Person Re-ID + VLM verification pipeline for offline space analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics",
    "lap>=0.5.12",
    "transformers>=5.2.0",
    "pyyaml",
    "Pillow",
    "qwen-vl-utils",
    "bitsandbytes",
    "accelerate",
]

[project.optional-dependencies]
tensorrt = [
    "onnx>=1.17.0",
    "onnxruntime-gpu>=1.20.0",
    "tensorrt>=10.0.0",
    "pycuda>=2024.1",
]
conversion = [
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "optimum[onnxruntime]>=1.22.0",
    "click>=8.0.0",
    "pyyaml",
]

[project.scripts]
mayi = "main:main"
mayi-convert = "convert.cli:cli"
