[project]
name = "mayi"
version = "0.1.0"
description = "Person Re-ID + VLM verification pipeline for offline space analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics",
    "lap>=0.5.12",
    "transformers>=5.2.0",  # VLM requirement
    "pyyaml",
    "Pillow",
    "qwen-vl-utils",        # VLM core feature
    "bitsandbytes",         # VLM core feature
    "accelerate",           # VLM core feature
]

[project.optional-dependencies]
# Model conversion (ONNX/TensorRT)
conversion = [
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "click>=8.0.0",
    "pyyaml",
]

# TensorRT GPU support
tensorrt = [
    "onnx>=1.17.0",
    "onnxruntime-gpu>=1.20.0",
    "tensorrt>=10.0.0",
    "pycuda>=2024.1",
]

[project.scripts]
mayi = "main:main"
mayi-convert = "convert.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mayi*", "convert*"]
exclude = ["data*", "models*", "config*", "output*", "reference*"]
